[project]
name = "picasso-i-choose-you"
version = "0.1.0"
description = "Picasso, I Choose You! — repaint your photo in the style of any artwork."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "streamlit>=1.33",
    "pillow>=10.0",
    "numpy>=1.24",
    "torch>=2.2.2",
    "torchvision>=0.17.2",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true