[project]
name = "picasso-i-choose-you"
version = "0.1.0"
description = "Picasso, I Choose You! — repaint your photo in the style of any artwork."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "streamlit>=1.33",
    "pillow>=10.0",
    "numpy>=1.24",
    "torch",
    "torchvision",
]